# Lucis

./: .gitignore  Cargo.toml  Notes.md  README.md  Trunk.toml  build.sh  compile.sh  image.ppm  image3.ppm  image4.ppm  index.html  index.js  run.sh  server.py  worker.js
OG/: compile.sh  index.html  index.js
OG/src/: perlin.rs
OG/src/core/: bvh.rs  ray.rs  ray_tracer.rs  refactor.rs
OG/src/core/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
OG/src/core/shape/: aabb.rs
OG/src/core/texture/: perlin_texture.rs
OG/src/utils/: color.rs  mod.rs  other.rs
assets/: w3.css
client/: package-lock.json  package.json  tsconfig.json  webpack.config.js
client/public/: index.html
client/scripts/: build.sh  clean.sh
client/src/: camera_display.tsx  element_display.tsx  index.css  index.jsx  material_display.tsx  quality_display.tsx  shape_display.tsx  styles.css  texture_display.tsx  utils.tsx  wasm_loader.js
client/src/contexts/: config.tsx
glue/: Cargo.toml  worker.js
glue/src/: lib.rs  main.rs
images/: image10.ppm  image11.ppm  image12.ppm  image13.ppm  image14.ppm  image15.ppm  image16.ppm  image17.ppm  image18.ppm  image19.ppm  image20.ppm  image21.ppm  image22.ppm  image23.ppm  image24.ppm  image26.ppm  image27.ppm  image28.ppm  image29.ppm  image30.ppm  image31.ppm  image33.ppm  image34.ppm  image35.ppm  image36.ppm  image37.ppm  image38.ppm  image39.ppm  image40.ppm  image41.ppm  image42.ppm  image43.ppm  image44.ppm  image45.ppm  image46.ppm  image47.ppm  image48.ppm  image49.ppm  image50.ppm  image7.ppm  (+2 more)
ray_tracer/: .gitignore  2465642_test.ppm  Cargo.toml  bench.sh  flame.sh  run.sh  test.ppm
ray_tracer/benches/: rectangles.rs
ray_tracer/src/: aabb.rs  camera.rs  collisions.rs  image.rs  lib.rs  main.rs  material.rs  perlin.rs  pool.rs  ray.rs  renderer.rs  scene.rs  shape.rs  texture.rs  utils.rs  vec3.rs
server/: package.json  server.js
src/: common.rs  cuboid.rs  hittable.rs  hittable_list.rs  image5.ppm  lib.rs  main.rs  pool.rs  scenes.rs  sphere.rs  utils.rs  worlds.rs
src/components/: display.rs  element_display.rs  mod.rs  ray_tracer_display.rs  stores.rs  utils.rs
src/core/: frame.rs  hittable.rs  hittable_list.rs  mod.rs  ray_tracer.rs  refactor.rs
src/core/common/: camera.rs
src/core/material/: lambertian.rs  material.rs
src/core/shape/: mod.rs  sphere.rs
src/core/texture/: checkered_texture.rs  mod.rs  texture.rs
src/math/: mod.rs  vec3.rs
src/ray/: mod.rs  ray.rs
src/ray_tracer/: aabb.rs  bvh.rs  camera.rs  dielectric.rs  frame.rs  image6.ppm  lambertian.rs  material.rs  metal.rs  mod.rs  moving_sphere.rs  ray_tracer.rs
src/ray_tracer/texture/: checkered_texture.rs  mod.rs  texture.rs
src/utils/: color.rs  mod.rs  point.rs
