[package]
name = "Lucis"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-logger = "0.2.0"
log = "0.4.6"
# yew = "0.19.3"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
wasm-bindgen = "0.2.82"
instant = { version = "0.1", features = ["stdweb", "wasm-bindgen"] }
rayon = "1.5"
futures = "0.3.21"
wasm-bindgen-futures = "0.4.32"
js-sys = "0.3.59"
yewdux = { git = "https://github.com/intendednull/yewdux.git" }
# yewdux = "0.7.0"


[dependencies.web-sys]
version = "0.3.59"
features = [
   "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "XmlHttpRequest",
    "XmlHttpRequestResponseType",
    "Document",
    "Node",
    "HtmlAnchorElement",

    # pool.rs
    'Navigator',
    'Window',
    'Worker',
    'DedicatedWorkerGlobalScope',
    'MessageEvent',
]

