[package]
name = "Lucis"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ray_tracer = { path = "ray_tracer" }
rayon = "1.5"
rand = "0.8.5"
futures = "0.3.21"
# wasm
getrandom = { version = "0.2", features = ["js"] }
wasm-logger = "0.2.0"
log = "0.4.6"
wasm-bindgen = "0.2.82"
instant = { version = "0.1", features = ["stdweb", "wasm-bindgen"] }
wasm-bindgen-futures = "0.4.32"
js-sys = "0.3.59"
# yew
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }
# material-yew = { git = "https://github.com/hamza1311/material-yew.git", features = ["full"] }


[dependencies.web-sys]
version = "0.3.59"
features = [
   "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "XmlHttpRequest",
    "XmlHttpRequestResponseType",
    "Document",
    "Node",
    "HtmlAnchorElement",
    "HtmlButtonElement"
]

