[package]
name = "glue"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
ray_tracer = { path = "../ray_tracer" }
# TODO: some of these crates are not required/used
rayon = "1.5"
rand = "0.8.5"
futures = "0.3.21"
# wasm
getrandom = { version = "0.2", features = ["js"] }
wasm-logger = "0.2.0"
log = "0.4.6"
instant = { version = "0.1", features = ["stdweb", "wasm-bindgen"] }
wasm-bindgen-futures = "0.4.32"
js-sys = "0.3.59"

# TODO: some of these features are not required/used
[dependencies.web-sys]
version = "0.3.59"
features = [
    "HtmlCanvasElement",
    "HtmlElement",
    "CanvasRenderingContext2d",
    "XmlHttpRequest",
    "XmlHttpRequestResponseType",
    "Document",
    "Node",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "MouseEvent"
]
