[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

[lib]
name = "ray_tracer"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
readonly = "0.2.2"
rayon = "1.5"
futures = "0.3.21"
serde = { version = "1.0", features = ["derive"] }

# wasm dependencies
js-sys = "0.3.59"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"

[dependencies.web-sys]
version = "0.3.59"
features = [
    # pool.rs
    'Navigator',
    'Window',
    'Worker',
    'DedicatedWorkerGlobalScope',
    'MessageEvent',
    'ErrorEvent'
]

[dev-dependencies]
# Benchmarking
criterion = "0.4.0"
# Profiling


[profile.release]
debug = true
